fix: align magazine prefix

--- a/kbin.user.css
+++ b/kbin.user.css
@@ -2,7 +2,7 @@
 @name kbin-css
 @namespace github/aclist/kbin-css
 @homepageURL https://github.com/aclist/kbin-css
-@version 0.1.3
+@version 0.1.4
 @updateURL https://github.com/aclist/kbin-css/raw/main/kbin.user.css
 @description Parameterized kbin stylesheet
 @author aclist
@@ -87,6 +87,7 @@
     /*recolor channel prefix*/
     .head-title span{
         color:var(--text);
+        padding-top: 0.3rem;
     }
     /*remove bottom border on active header item*/
     #header menu li .active, #header menu li a, #header menu li a:hover{
